// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getProjectMetadata activities passes basic sanity 1`] = `
Array [
  Object {
    "action": "fake-action",
    "category": "ActivityCategory",
    "clientOnly": true,
    "deprecated": "ActivityDeprecated",
    "description": "ActivityDescription",
    "displayName": "ActivityDisplayName",
    "helpUrl": "http://help/TestActivity",
    "inputs": Object {
      "input1": Object {
        "clientOnly": true,
        "defaultExpressionHint": "Input1DefaultExpressionHint",
        "defaultValue": "Input1DefaultValue",
        "deprecated": "Input1Deprecated",
        "description": "Input1Description",
        "displayName": "Input1DisplayName",
        "isHidden": true,
        "isRequired": true,
        "name": "input1",
        "noExpressions": undefined,
        "onlineOnly": true,
        "placeholder": "Input1Placeholder",
        "serverOnly": undefined,
        "supportedApps": Array [
          "gvh",
        ],
        "typeName": "string",
        "unsupportedApps": undefined,
      },
      "input2": Object {
        "clientOnly": undefined,
        "defaultExpressionHint": undefined,
        "defaultValue": undefined,
        "deprecated": undefined,
        "description": undefined,
        "displayName": "Input2",
        "isHidden": undefined,
        "isRequired": undefined,
        "name": "input2",
        "noExpressions": undefined,
        "onlineOnly": undefined,
        "placeholder": undefined,
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "number",
        "unsupportedApps": undefined,
      },
    },
    "isHidden": true,
    "onlineOnly": true,
    "outputs": Object {
      "output1": Object {
        "clientOnly": true,
        "defaultExpressionHint": "Output1DefaultExpressionHint",
        "defaultValue": "Output1DefaultValue",
        "deprecated": "Output1Deprecated",
        "description": "Output1Description",
        "displayName": "Output1DisplayName",
        "isHidden": true,
        "isRequired": true,
        "name": "output1",
        "noExpressions": undefined,
        "onlineOnly": true,
        "placeholder": "Output1Placeholder",
        "serverOnly": undefined,
        "supportedApps": Array [
          "gxw",
        ],
        "typeName": "string",
        "unsupportedApps": undefined,
      },
      "output2": Object {
        "clientOnly": undefined,
        "defaultExpressionHint": undefined,
        "defaultValue": undefined,
        "deprecated": undefined,
        "description": undefined,
        "displayName": "Output2",
        "isHidden": undefined,
        "isRequired": undefined,
        "name": "output2",
        "noExpressions": undefined,
        "onlineOnly": undefined,
        "placeholder": undefined,
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "number",
        "unsupportedApps": undefined,
      },
    },
    "serverOnly": undefined,
    "suite": "fake-suite",
    "supportedApps": Array [
      "gvh",
      "gxw",
    ],
    "unsupportedApps": undefined,
  },
]
`;

exports[`getProjectMetadata elements passes basic sanity 1`] = `
Array [
  Object {
    "deprecated": "ElementDeprecated",
    "description": "ElementDescription",
    "displayName": "ElementDisplayName",
    "helpUrl": "http://help/TestElement",
    "id": "foo",
    "inputs": Object {
      "input1": Object {
        "clientOnly": true,
        "defaultExpressionHint": "Input1DefaultExpressionHint",
        "defaultValue": "Input1DefaultValue",
        "deprecated": "Input1Deprecated",
        "description": "Input1Description",
        "displayName": "Input1DisplayName",
        "isHidden": true,
        "isRequired": true,
        "name": "input1",
        "noExpressions": undefined,
        "onlineOnly": true,
        "placeholder": "Input1Placeholder",
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "string",
        "unsupportedApps": Array [
          "wab",
        ],
      },
      "input2": Object {
        "clientOnly": undefined,
        "defaultExpressionHint": undefined,
        "defaultValue": undefined,
        "deprecated": undefined,
        "description": undefined,
        "displayName": "Input2",
        "isHidden": undefined,
        "isRequired": undefined,
        "name": "input2",
        "noExpressions": undefined,
        "onlineOnly": undefined,
        "placeholder": undefined,
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "number",
        "unsupportedApps": undefined,
      },
    },
    "suite": "uuid:proj-id-123",
    "supportedApps": undefined,
    "unsupportedApps": Array [
      "wab",
    ],
  },
  Object {
    "deprecated": "ElementDeprecated",
    "description": "ElementDescription",
    "displayName": "ElementDisplayName",
    "helpUrl": "http://help/TestElement",
    "id": "bar",
    "inputs": Object {
      "input1": Object {
        "clientOnly": true,
        "defaultExpressionHint": "Input1DefaultExpressionHint",
        "defaultValue": "Input1DefaultValue",
        "deprecated": "Input1Deprecated",
        "description": "Input1Description",
        "displayName": "Input1DisplayName",
        "isHidden": true,
        "isRequired": true,
        "name": "input1",
        "noExpressions": undefined,
        "onlineOnly": true,
        "placeholder": "Input1Placeholder",
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "string",
        "unsupportedApps": Array [
          "wab",
        ],
      },
      "input2": Object {
        "clientOnly": undefined,
        "defaultExpressionHint": undefined,
        "defaultValue": undefined,
        "deprecated": undefined,
        "description": undefined,
        "displayName": "Input2",
        "isHidden": undefined,
        "isRequired": undefined,
        "name": "input2",
        "noExpressions": undefined,
        "onlineOnly": undefined,
        "placeholder": undefined,
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "number",
        "unsupportedApps": undefined,
      },
    },
    "suite": "uuid:proj-id-123",
    "supportedApps": undefined,
    "unsupportedApps": Array [
      "wab",
    ],
  },
  Object {
    "deprecated": "ElementDeprecated",
    "description": "ElementDescription",
    "displayName": "ElementDisplayName",
    "helpUrl": "http://help/TestElement",
    "id": "baz",
    "inputs": Object {
      "input1": Object {
        "clientOnly": true,
        "defaultExpressionHint": "Input1DefaultExpressionHint",
        "defaultValue": "Input1DefaultValue",
        "deprecated": "Input1Deprecated",
        "description": "Input1Description",
        "displayName": "Input1DisplayName",
        "isHidden": true,
        "isRequired": true,
        "name": "input1",
        "noExpressions": undefined,
        "onlineOnly": true,
        "placeholder": "Input1Placeholder",
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "string",
        "unsupportedApps": Array [
          "wab",
        ],
      },
      "input2": Object {
        "clientOnly": undefined,
        "defaultExpressionHint": undefined,
        "defaultValue": undefined,
        "deprecated": undefined,
        "description": undefined,
        "displayName": "Input2",
        "isHidden": undefined,
        "isRequired": undefined,
        "name": "input2",
        "noExpressions": undefined,
        "onlineOnly": undefined,
        "placeholder": undefined,
        "serverOnly": undefined,
        "supportedApps": undefined,
        "typeName": "number",
        "unsupportedApps": undefined,
      },
    },
    "suite": "uuid:proj-id-123",
    "supportedApps": undefined,
    "unsupportedApps": Array [
      "wab",
    ],
  },
]
`;
